tests/error/array_errors/new_array_elem_mismatch2.py
from guppylang.decorator import guppy
from guppylang.std.builtins import array


@guppy
def main() -> None:
    array(1, False)


guppy.compile(main)