tests/error/array_errors/new_array_elem_mismatch2.err
Error: Type mismatch (at $FILE:7:13)
  | 
5 | @guppy
6 | def main() -> None:
7 |     array(1, False)
  |              ^^^^^ Expected expression of type `int`, got `bool`

Guppy compilation failed due to 1 previous error
